tests/examples/good/good001.jl
// wypisz liczby parzyste do 10

int main () {
  int i ;
  i = 0 ;
  while (i < 10){
    if (i % 2 == 0) printInt(i) ; 
    i++ ;
    } ;
  printInt(i) ;
  return 0 ;
  } ;
