tests/examples/bad/bad103.jl
// wrong type of main

void main(int argc)
{
   return;
}
